# fastapi_do_zero

./: alembic.ini  pyproject.toml
magrations/: env.py
magrations/versions/: 0cfaf502ee68_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
