[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "thomazkkkkk",email = "thomazdemoraisnunes2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "gh (>=0.0.4,<0.0.5)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev C:\Users\thoma\Downloads\FastAPI\fast_zero\src\fast_zero\app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=C:\Users\thoma\Downloads\FastAPI\fast_zero\src\fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
